--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 streamlit==1.14.0
-opencv-python-headless==4.5.5.64
+pandas==2.0.3
 scikit-learn==1.3.1
-numpy==1.24.2
+joblib==1.2.0
+opencv-python-headless==4.8.0.76
